Pothole Segmentation train/val

--- a/Pothole_Model_Seg_Final.ipynb
+++ b/Pothole_Model_Seg_Final.ipynb
@@ -172,18 +172,13 @@
       "cell_type": "code",
       "source": [
         "# — 훈련 함수 —\n",
-        "def train_full(seg_epochs=5, cls_epochs=5, seg_bs=16, cls_bs=16):\n",
+        "def train_seg(seg_epochs=5, seg_bs=16):\n",
         "    device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
-        "    scaler_s, scaler_c = GradScaler(), GradScaler()\n",
-        "    os.makedirs(os.path.join(DATA_ROOT,'model_weights'), exist_ok=True)\n",
+        "    scaler_s = GradScaler()\n",
         "\n",
         "    seg_model = get_deeplab_model(2).to(device)\n",
         "    seg_opt   = torch.optim.Adam(seg_model.parameters(), lr=1e-4)\n",
         "    seg_loss  = nn.CrossEntropyLoss()\n",
-        "\n",
-        "    cls_model = ResNetCBAM(num_classes=3).to(device)\n",
-        "    cls_opt   = torch.optim.Adam(cls_model.parameters(), lr=1e-4)\n",
-        "    cls_loss  = nn.CrossEntropyLoss()\n",
         "\n",
         "    # — Segmentation loop —\n",
         "    for epoch in range(1, seg_epochs+1):\n",
@@ -242,10 +237,26 @@
         "                        v_loss += loss.item(); v_steps += 1\n",
         "        avg_val = v_loss/v_steps\n",
         "\n",
-        "        torch.save(seg_model.state_dict(), f\"model_weights/deeplab_ep{epoch}.pth\")\n",
-        "        print(f\"Seg Ep{epoch} | Train:{avg_tr:.4f} | Val:{avg_val:.4f}\")\n",
+        "        torch.save(seg_model.state_dict(), f\"deeplab_ep{epoch}.pth\")\n",
+        "        print(f\"Seg Ep{epoch} | Train:{avg_tr:.4f} | Val:{avg_val:.4f}\")"
+      ],
+      "metadata": {
+        "id": "1ZCl2bamqwHP"
+      },
+      "execution_count": 20,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def train_cls(cls_epochs=5, cls_bs=16):\n",
+        "    device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+        "    scaler_c = GradScaler()\n",
+        "    cls_model = ResNetCBAM(num_classes=3).to(device)\n",
+        "    cls_opt   = torch.optim.Adam(cls_model.parameters(), lr=1e-4)\n",
+        "    cls_loss  = nn.CrossEntropyLoss()\n",
         "\n",
-        "    # — ROI 추출 —\n",
+        "  # — ROI 추출 —\n",
         "    rois, labels = [], []\n",
         "    for pklf in tqdm(train_pkls, desc=\"ROI Extract\", unit=\"file\"):\n",
         "        with open(pklf,'rb') as f: batch = pickle.load(f)\n",
@@ -322,28 +333,28 @@
         "                        v_loss += loss.item(); v_steps += 1\n",
         "            avg_val = v_loss/v_steps\n",
         "\n",
-        "            torch.save(cls_model.state_dict(), f\"model_weights/resnetcbam_ep{epoch}.pth\")\n",
+        "            torch.save(cls_model.state_dict(), f\"resnetcbam_ep{epoch}.pth\")\n",
         "            print(f\"Cls Ep{epoch} | Train:{avg_tr:.4f} | Val:{avg_val:.4f}\")\n",
         "    else:\n",
         "        print(\"Skipping classification training and validation due to no extracted ROIs.\")"
       ],
       "metadata": {
-        "id": "1ZCl2bamqwHP"
+        "id": "hYJrlhn0ymSF"
       },
-      "execution_count": 18,
+      "execution_count": 21,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "train_full()"
+        "train_seg()"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "KojDeagUrBRe",
-        "outputId": "2df616f3-cce5-4e4a-dd3c-6933980c3a02"
+        "outputId": "3dcece55-9841-46ac-8f5f-53e90c82793f"
       },
       "execution_count": null,
       "outputs": [
@@ -351,19 +362,17 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "<ipython-input-18-7d48ab69a22e>:4: FutureWarning: `torch.cuda.amp.GradScaler(args...)` is deprecated. Please use `torch.amp.GradScaler('cuda', args...)` instead.\n",
-            "  scaler_s, scaler_c = GradScaler(), GradScaler()\n",
+            "<ipython-input-20-8c099831cb6b>:4: FutureWarning: `torch.cuda.amp.GradScaler(args...)` is deprecated. Please use `torch.amp.GradScaler('cuda', args...)` instead.\n",
+            "  scaler_s = GradScaler()\n",
             "/usr/local/lib/python3.11/dist-packages/torchvision/models/_utils.py:208: UserWarning: The parameter 'pretrained' is deprecated since 0.13 and may be removed in the future, please use 'weights' instead.\n",
             "  warnings.warn(\n",
             "/usr/local/lib/python3.11/dist-packages/torchvision/models/_utils.py:223: UserWarning: Arguments other than a weight enum or `None` for 'weights' are deprecated since 0.13 and may be removed in the future. The current behavior is equivalent to passing `weights=DeepLabV3_ResNet101_Weights.COCO_WITH_VOC_LABELS_V1`. You can also use `weights=DeepLabV3_ResNet101_Weights.DEFAULT` to get the most up-to-date weights.\n",
             "  warnings.warn(msg)\n",
-            "/usr/local/lib/python3.11/dist-packages/torchvision/models/_utils.py:223: UserWarning: Arguments other than a weight enum or `None` for 'weights' are deprecated since 0.13 and may be removed in the future. The current behavior is equivalent to passing `weights=ResNet50_Weights.IMAGENET1K_V1`. You can also use `weights=ResNet50_Weights.DEFAULT` to get the most up-to-date weights.\n",
-            "  warnings.warn(msg)\n",
-            "Seg Train Ep1:   0%|          | 0/42 [00:00<?, ?file/s]<ipython-input-18-7d48ab69a22e>:21: DeprecationWarning: numpy.core.numeric is deprecated and has been renamed to numpy._core.numeric. The numpy._core namespace contains private NumPy internals and its use is discouraged, as NumPy internals can change without warning in any release. In practice, most real-world usage of numpy.core is to access functionality in the public NumPy API. If that is the case, use the public NumPy API. If not, you are using NumPy internals. If you would still like to access an internal attribute, use numpy._core.numeric._frombuffer.\n",
+            "Seg Train Ep1:   0%|          | 0/42 [00:00<?, ?file/s]<ipython-input-20-8c099831cb6b>:16: DeprecationWarning: numpy.core.numeric is deprecated and has been renamed to numpy._core.numeric. The numpy._core namespace contains private NumPy internals and its use is discouraged, as NumPy internals can change without warning in any release. In practice, most real-world usage of numpy.core is to access functionality in the public NumPy API. If that is the case, use the public NumPy API. If not, you are using NumPy internals. If you would still like to access an internal attribute, use numpy._core.numeric._frombuffer.\n",
             "  with open(pklf,'rb') as f: batch = pickle.load(f)\n",
-            "<ipython-input-18-7d48ab69a22e>:36: FutureWarning: `torch.cuda.amp.autocast(args...)` is deprecated. Please use `torch.amp.autocast('cuda', args...)` instead.\n",
+            "<ipython-input-20-8c099831cb6b>:31: FutureWarning: `torch.cuda.amp.autocast(args...)` is deprecated. Please use `torch.amp.autocast('cuda', args...)` instead.\n",
             "  with autocast():\n",
-            "Seg Train Ep1:  17%|█▋        | 7/42 [04:21<21:45, 37.30s/file]"
+            "Seg Train Ep1:   2%|▏         | 1/42 [00:32<21:52, 32.01s/file]"
           ]
         }
       ]
