FEAT: ROI warping code modified

--- a/Pothole_Model_Seg_Final.ipynb
+++ b/Pothole_Model_Seg_Final.ipynb
@@ -250,93 +250,116 @@
       "cell_type": "code",
       "source": [
         "def train_cls(cls_epochs=5, cls_bs=16):\n",
-        "    device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+        "    device   = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
         "    scaler_c = GradScaler()\n",
         "    cls_model = ResNetCBAM(num_classes=3).to(device)\n",
         "    cls_opt   = torch.optim.Adam(cls_model.parameters(), lr=1e-4)\n",
         "    cls_loss  = nn.CrossEntropyLoss()\n",
         "\n",
-        "  # — ROI 추출 —\n",
+        "    # 크기 기반 클래스 분할 경계 (면적 비율 기준)\n",
+        "    boundaries = [0.1, 0.5]  # 0~0.1: small, 0.1~0.5: medium, >0.5: large\n",
+        "\n",
+        "    W = 224  # 출력 폭 고정\n",
+        "\n",
+        "    # — ROI 추출 및 크기 라벨링 —\n",
         "    rois, labels = [], []\n",
         "    for pklf in tqdm(train_pkls, desc=\"ROI Extract\", unit=\"file\"):\n",
-        "        with open(pklf,'rb') as f: batch = pickle.load(f)\n",
+        "        with open(pklf,'rb') as f:\n",
+        "            batch = pickle.load(f)\n",
         "        items = batch.items() if isinstance(batch,dict) else [(i,e['image']) for i,e in enumerate(batch)]\n",
         "        for key, img in items:\n",
         "            arr = img.numpy() if hasattr(img,'numpy') else np.array(img)\n",
-        "            mask = torch.from_numpy(create_mask(ann_dict.get(key,{}).get('bboxes',[]), arr.shape[:2]))\n",
-        "            # Ensure warp_roi can handle tensor inputs and potentially move to device\n",
-        "            roi, _ = warp_roi(seg_tf(Image.fromarray(arr.astype(np.uint8))).to(device), mask.to(device), [])\n",
-        "            if roi is not None:\n",
-        "                rois.append(roi.cpu()); labels.append(int(ann_dict.get(key,{}).get('labels',[0])[0]))\n",
+        "            # 바이너리 마스크 생성\n",
+        "            mask_np = create_mask(ann_dict.get(key,{}).get('bboxes',[]), arr.shape[:2]).astype(np.uint8)\n",
+        "            cnts,_  = cv2.findContours(mask_np, cv2.RETR_EXTERNAL, cv2.CHAIN_APPROX_SIMPLE)\n",
+        "            if not cnts:\n",
+        "                continue\n",
+        "            c = max(cnts, key=cv2.contourArea)\n",
         "\n",
-        "    # Handle case where no ROIs are extracted\n",
+        "            # 1) 최소 외접 사각형에서 4점 획득\n",
+        "            rect = cv2.minAreaRect(c)\n",
+        "            box  = cv2.boxPoints(rect)  # shape (4,2)\n",
+        "\n",
+        "            # 2) 상/하 두 점 분리 후, 밑변이 더 길도록 스왑\n",
+        "            pts_sorted = sorted(box, key=lambda p: p[1])\n",
+        "            top_pts    = sorted(pts_sorted[:2], key=lambda p: p[0])\n",
+        "            bot_pts    = sorted(pts_sorted[2:], key=lambda p: p[0])\n",
+        "            top_w = np.linalg.norm(top_pts[1] - top_pts[0])\n",
+        "            bot_w = np.linalg.norm(bot_pts[1] - bot_pts[0])\n",
+        "            if bot_w < top_w:\n",
+        "                top_pts, bot_pts = bot_pts, top_pts\n",
+        "                top_w, bot_w   = bot_w, top_w\n",
+        "\n",
+        "            tl, tr = top_pts\n",
+        "            bl, br = bot_pts\n",
+        "\n",
+        "            src_pts = np.array([tl, tr, br, bl], dtype=np.float32)\n",
+        "\n",
+        "            # 3) 동적 높이 계산\n",
+        "            top_y = min(tl[1], tr[1])\n",
+        "            bot_y = max(br[1], bl[1])\n",
+        "            h_src = bot_y - top_y\n",
+        "            H     = int((h_src / bot_w) * W) if bot_w > 0 else W\n",
+        "\n",
+        "            dst_pts = np.array([\n",
+        "                [0,     0],\n",
+        "                [W-1,   0],\n",
+        "                [W-1, H-1],\n",
+        "                [0,    H-1]\n",
+        "            ], dtype=np.float32)\n",
+        "\n",
+        "            # 4) 투시 변환 및 패딩\n",
+        "            M      = cv2.getPerspectiveTransform(src_pts, dst_pts)\n",
+        "            warped = cv2.warpPerspective(arr[..., ::-1], M, (W, H))\n",
+        "            if H < W:\n",
+        "                pad_top = (W - H)//2\n",
+        "                pad_bot = W - H - pad_top\n",
+        "                warped = cv2.copyMakeBorder(warped, pad_top, pad_bot, 0, 0,\n",
+        "                                            cv2.BORDER_CONSTANT, value=0)\n",
+        "\n",
+        "            # 5) 텐서 변환 및 정규화\n",
+        "            roi_tensor = roi_tf(warped).to(device)\n",
+        "            rois.append(roi_tensor)\n",
+        "\n",
+        "            # 6) 면적 비율 기반 크기 라벨링\n",
+        "            img_area  = arr.shape[0] * arr.shape[1]\n",
+        "            bbox_area = rect[1][0] * rect[1][1]\n",
+        "            ratio     = bbox_area / img_area if img_area > 0 else 0\n",
+        "            size_label= int(np.digitize(ratio, boundaries))\n",
+        "            labels.append(size_label)\n",
+        "\n",
+        "    # 로더 준비\n",
         "    if not rois:\n",
-        "        print(\"No ROIs extracted for training. Skipping classification training.\")\n",
-        "        train_ld = None # Or handle this differently based on desired behavior\n",
-        "    else:\n",
-        "        X = torch.stack([roi_tf(r) for r in rois])\n",
-        "        Y = torch.tensor(labels)\n",
-        "        train_ld = DataLoader(TensorDataset(X, Y), batch_size=cls_bs, shuffle=True,\n",
-        "                              num_workers=4, pin_memory=True)\n",
+        "        print(\"No ROIs extracted. Skipping classification.\")\n",
+        "        return\n",
         "\n",
-        "    # Prepare val set ROI in the same way...\n",
-        "    val_rois, val_labels = [], []\n",
-        "    for pklf in tqdm(val_pkls, desc=\"Val ROI Extract\", unit=\"file\"):\n",
-        "         with open(pklf,'rb') as f: batch = pickle.load(f)\n",
-        "         items = batch.items() if isinstance(batch,dict) else [(i,e['image']) for i,e in enumerate(batch)]\n",
-        "         for key, img in items:\n",
-        "             arr = img.numpy() if hasattr(img,'numpy') else np.array(img)\n",
-        "             mask = torch.from_numpy(create_mask(ann_dict.get(key,{}).get('bboxes',[]), arr.shape[:2]))\n",
-        "             roi, _ = warp_roi(seg_tf(Image.fromarray(arr.astype(np.uint8))).to(device), mask.to(device), [])\n",
-        "             if roi is not None:\n",
-        "                 val_rois.append(roi.cpu()); val_labels.append(int(ann_dict.get(key,{}).get('labels',[0])[0]))\n",
+        "    X = torch.stack(rois)\n",
+        "    Y = torch.tensor(labels, dtype=torch.long)\n",
+        "    train_ld = DataLoader(TensorDataset(X, Y),\n",
+        "                          batch_size=cls_bs,\n",
+        "                          shuffle=True,\n",
+        "                          num_workers=4,\n",
+        "                          pin_memory=True)\n",
         "\n",
-        "    # Handle case where no validation ROIs are extracted\n",
-        "    if not val_rois:\n",
-        "        print(\"No ROIs extracted for validation. Skipping classification validation.\")\n",
-        "        val_ld = None # Or handle this differently based on desired behavior\n",
-        "    else:\n",
-        "        val_X = torch.stack([roi_tf(r) for r in val_rois])\n",
-        "        val_Y = torch.tensor(val_labels)\n",
-        "        val_ld = DataLoader(TensorDataset(val_X, val_Y), batch_size=cls_bs, shuffle=False,\n",
-        "                            num_workers=4, pin_memory=True)\n",
+        "    # — 분류 훈련 루프 —\n",
+        "    for epoch in range(1, cls_epochs+1):\n",
+        "        cls_model.train()\n",
+        "        total_loss, steps = 0.0, 0\n",
+        "        for xb, yb in tqdm(train_ld, desc=f\"Cls Train Ep{epoch}\", unit=\"batch\"):\n",
+        "            xb, yb = xb.to(device), yb.to(device)\n",
+        "            with autocast(device_type=device.type):\n",
+        "                logits = cls_model(xb)\n",
+        "                loss   = cls_loss(logits, yb)\n",
+        "            cls_opt.zero_grad()\n",
+        "            scaler_c.scale(loss).backward()\n",
+        "            scaler_c.step(cls_opt)\n",
+        "            scaler_c.update()\n",
+        "            total_loss += loss.item()\n",
+        "            steps += 1\n",
+        "        print(f\"Cls Ep{epoch} | Train Loss: {total_loss/steps:.4f}\")\n",
         "\n",
-        "\n",
-        "    # — Classification loop —\n",
-        "    if train_ld is not None and val_ld is not None: # Only run if both loaders are prepared\n",
-        "        for epoch in range(1, cls_epochs+1):\n",
-        "            cls_model.train()\n",
-        "            total_loss, steps = 0, 0\n",
-        "            for xb,yb in tqdm(train_ld, desc=f\"Cls Train Ep{epoch}\", unit=\"batch\"):\n",
-        "                xb,yb = xb.to(device), yb.to(device)\n",
-        "                # Change autocast initialization for older PyTorch versions\n",
-        "                with autocast():\n",
-        "                #with autocast(enabled=device.type=='cuda'):\n",
-        "                    logits = cls_model(xb)\n",
-        "                    loss = cls_loss(logits, yb)\n",
-        "                cls_opt.zero_grad()\n",
-        "                scaler_c.scale(loss).backward()\n",
-        "                scaler_c.step(cls_opt)\n",
-        "                scaler_c.update()\n",
-        "                total_loss += loss.item(); steps += 1\n",
-        "            avg_tr = total_loss/steps\n",
-        "\n",
-        "            cls_model.eval()\n",
-        "            v_loss, v_steps = 0, 0\n",
-        "            for xb,yb in tqdm(val_ld, desc=f\"Cls Val Ep{epoch}\", unit=\"batch\"):\n",
-        "                xb,yb = xb.to(device), yb.to(device)\n",
-        "                with torch.no_grad():\n",
-        "                     # Change autocast initialization for older PyTorch versions\n",
-        "                    with autocast(enabled=device.type=='cuda'):\n",
-        "                        logits = cls_model(xb)\n",
-        "                        loss = cls_loss(logits, yb)\n",
-        "                        v_loss += loss.item(); v_steps += 1\n",
-        "            avg_val = v_loss/v_steps\n",
-        "\n",
-        "            torch.save(cls_model.state_dict(), f\"resnetcbam_ep{epoch}.pth\")\n",
-        "            print(f\"Cls Ep{epoch} | Train:{avg_tr:.4f} | Val:{avg_val:.4f}\")\n",
-        "    else:\n",
-        "        print(\"Skipping classification training and validation due to no extracted ROIs.\")"
+        "        # (필요 시 검증 루프 추가)\n",
+        "        torch.save(cls_model.state_dict(), f\"resnetcbam_ep{epoch}.pth\")"
       ],
       "metadata": {
         "id": "hYJrlhn0ymSF"
@@ -372,7 +395,26 @@
             "  with open(pklf,'rb') as f: batch = pickle.load(f)\n",
             "<ipython-input-20-8c099831cb6b>:31: FutureWarning: `torch.cuda.amp.autocast(args...)` is deprecated. Please use `torch.amp.autocast('cuda', args...)` instead.\n",
             "  with autocast():\n",
-            "Seg Train Ep1:   2%|▏         | 1/42 [00:32<21:52, 32.01s/file]"
+            "Seg Train Ep1: 100%|██████████| 42/42 [24:38<00:00, 35.20s/file]\n",
+            "Seg Val Ep1:   0%|          | 0/6 [00:00<?, ?file/s]<ipython-input-20-8c099831cb6b>:45: DeprecationWarning: numpy.core.numeric is deprecated and has been renamed to numpy._core.numeric. The numpy._core namespace contains private NumPy internals and its use is discouraged, as NumPy internals can change without warning in any release. In practice, most real-world usage of numpy.core is to access functionality in the public NumPy API. If that is the case, use the public NumPy API. If not, you are using NumPy internals. If you would still like to access an internal attribute, use numpy._core.numeric._frombuffer.\n",
+            "  with open(pklf,'rb') as f: batch = pickle.load(f)\n",
+            "<ipython-input-20-8c099831cb6b>:59: FutureWarning: `torch.cuda.amp.autocast(args...)` is deprecated. Please use `torch.amp.autocast('cuda', args...)` instead.\n",
+            "  with autocast():\n",
+            "Seg Val Ep1: 100%|██████████| 6/6 [01:39<00:00, 16.59s/file]\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Seg Ep1 | Train:0.0039 | Val:0.0000\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Seg Train Ep2:   7%|▋         | 3/42 [01:43<22:39, 34.86s/file]"
           ]
         }
       ]
